--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
 			this.i = i;	//index
 			this.S = S; //member bodies
 
+			this.hardness = 1;
+
 			/*
 			this.W = [];
 
@@ -200,7 +202,7 @@
 				);
 				*/
 
-				var dP = numeric['dot'](WnablaCT, lambda);
+				var dP = numeric['*'](this.hardness, numeric['dot'](WnablaCT, lambda));
 				//update positions
 				for(var i = 0; i < this.S.length; ++i){
 					this.S[i].q = numeric['+'](this.S[i].q, [dP[3*i][0], dP[3*i+1][0], dP[3*i+2][0]]);
@@ -329,6 +331,41 @@
 			), this.data['n']);
 		}
 
+
+
+
+		//constraint: collision constraint
+		function f_constraint(i, A, t, r){
+			constraint.call(this, i, [A]);
+
+			this.t = t;		//unit tangent vector
+			this.rA = r;
+
+			this.P0 = numeric['+'](
+			[q0[this.S[0].i][0], q0[this.S[0].i][1]],
+			rot(this.S[0].q[2], this.rA));
+
+			mark(this.P0);
+
+			this.hardness = 1;
+
+		}
+		f_constraint.prototype = Object.create(constraint.prototype);
+		f_constraint.prototype.constructor = f_constraint;
+
+		f_constraint.prototype.condition = function(){ return true; }//this.C() > 1; }
+
+		f_constraint.prototype.C = function(){
+
+			var P = numeric['+'](
+					[this.S[0].q[0], this.S[0].q[1]],
+					rot(this.S[0].q[2], this.rA));
+
+
+			return numeric['dot'](
+					numeric['-'](P, this.P0),
+					this.t);
+		}
 
 
 
@@ -485,6 +522,7 @@
 				res[ord[0]] = {
 					'inc': inc,
 					'n': manifold['n'],
+					't': [-manifold['n'][1], manifold['n'][0]],
 					'Rinc': rot(-S[inc].q[2],
 							numeric['-'](clipped[inc][ord[0]],
 										[S[inc].q[0], S[inc].q[1]])),
@@ -509,9 +547,12 @@
 
 		function collide(){
 
+			F = []; flabel = 0;
 			K = [];	klabel = 0;
+
 			for(var i = 0; i < B.length; ++i){
 			for(var j = i+1; j < B.length; ++j){
+
 			if(B[i] && B[j]){
 
 					var res = box_to_box(B[i], B[j]);
@@ -520,10 +561,36 @@
 					else {
 						//console.log('collision between: ' + i + ' ' + j);
 						res.forEach(function(r){
-
-						K[klabel] = new k_constraint(klabel, B[i], B[j], r); ++klabel;
-
+							K[klabel] = new k_constraint(klabel, B[i], B[j], r); ++klabel;
 						});
+
+
+						var Rinc = numeric['*'](1/2, numeric['+'](res[0]['Rinc'], res[1]['Rinc']));
+						var Rref = numeric['*'](1/2, numeric['+'](res[0]['Rref'], res[1]['Rref']));
+
+						if(res[0]['inc']){
+
+							F[flabel] =
+							new f_constraint(flabel, B[j], res[0]['t'], Rinc);
+							++flabel;
+
+							F[flabel] =
+							new f_constraint(flabel, B[i], res[0]['t'], Rref);
+							++flabel;
+
+						} else {
+
+							F[flabel] =
+							new f_constraint(flabel, B[i], res[0]['t'], Rinc);
+							++flabel;
+
+							F[flabel] =
+							new f_constraint(flabel, B[j], res[0]['t'], Rref);
+							++flabel;
+
+
+						}
+
 					}
 					
 
@@ -537,7 +604,7 @@
 		var C = []; var clabel = 0; //static constraints
 
 		var K = []; var klabel = 0; //collision constraints
-
+		var F = []; var flabel = 0; //friction constraints
 
 
 
@@ -594,7 +661,7 @@
 			var dampforce = numeric['*'](coef_b, v);
 			
 
-			console.log(d);
+			//console.log(d);
 			return numeric['+'](dragforce, dampforce);
 		}
 
@@ -610,7 +677,9 @@
 			B[blabel] = new box(blabel, 1e+12, 180, 40, [300, 200, 0], [0, 0, 0]); ++blabel;
 			C[clabel] = new anchor_constraint(clabel, B[0]); ++clabel
 
-			B[blabel] = new box(blabel, 1, 40, 40, [240, 250, 0], [0, 0, 0]); ++blabel;
+			B[blabel] = new box(blabel, 1, 40, 40, [240, 250, 0], [50, 0, 0]); ++blabel;
+
+			/*
 			B[blabel] = new box(blabel, 1, 40, 40, [300, 250, 0], [0, 0, 0]); ++blabel;
 			B[blabel] = new box(blabel, 1, 40, 40, [360, 250, 0], [0, 0, 0]); ++blabel;
 
@@ -618,12 +687,12 @@
 			B[blabel] = new box(blabel, 1, 40, 40, [330, 292, 0], [0, 0, 0]); ++blabel;
 
 			B[blabel] = new box(blabel, 1, 40, 40, [300, 334, 0], [0, 0, 0]); ++blabel;
-			
+			*/
 			
 
 			//B[blabel] = new box(blabel, 1, 40, 40, [100, 400, 0], [150, 0, -6]); ++blabel;	
 
-			window.setInterval(timestep, 30);
+			//window.setInterval(timestep, 30);
 
 		});
 
@@ -645,25 +714,34 @@
 
 			for(var i = 0; i < 12; ++i){
 
-			C.forEach(function(c){ c.solve(); });
+				C.forEach(function(c){ c.solve(); });
 
 			}
 		}
 
 		function render(){ B.forEach(function(b){ b.sync(); }); }
 
+		var q0 = [];
 		function timestep(){
+			//timestepping
 
-			//position update & constraint step
+			//log previous positions for use later
+			B.forEach(function(b){ q0[b.i] = b.q; });
+
+			//timestepping & constraining step
 			integrate();
 			constrain();
 
-
+			//collision detection & manifold generation
 			collide();
+
+			//solving generated collision constraints
 			for(var i = 0; i < 4; ++i){
 				K.forEach(function(k){ k.solve(); });
 			}
-
+			for(var i = 0; i < 14; ++i){
+				F.forEach(function(f){ f.solve(); });
+			}
 			render();
 
 		}
