de-obfuscated clipping code

--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
 			create_box(1e+12, 180, 40, [300, 200, 0], [0, 0, 0]);
 			anchor(0);
 			
+			//create_box(1, 40, 40, [220, 250, Math.PI/4+0.2], [5, 0, 0]);
+			//create_box(1, 40, 40, [380, 250, 0.6], [-10, 0, 0]);
 			
-			create_box(1, 40, 40, [240, 250, 0], [0, 0, 0]);
 
-			
+			create_box(1, 40, 40, [240, 250, 0], [0, 0, 0]);
 			create_box(1, 40, 40, [300, 250, 0], [0, 0, 0]);
 			create_box(1, 40, 40, [360, 250, 0], [0, 0, 0]);
 
@@ -93,35 +94,8 @@
 			create_box(1, 40, 40, [330, 292, 0], [0, 0, 0]);
 
 			create_box(1, 40, 40, [300, 334, 0], [0, 0, 0]);
-			
-			
-			
-			create_box(1e+12, 10, 10, [400, 600, 0], [0, 0, 0]);
-			anchor(7);
 
-			create_box(1, 10, 70, [400, 570, 0], [0, 0, 0]);
-			create_box(1, 10, 70, [400, 510, 0], [60, 0, 0]);
-			create_box(1, 10, 70, [400, 450, 0], [60, 0, 0]);
-			create_box(1, 10, 70, [400, 390, 0], [60, 0, 0]);
-			create_box(1, 10, 70, [400, 330, 0], [60, 0, 0]);
 
-			create_box(4, 40, 80, [400, 260, 0], [60, 0, 0]);
-			create_box(4, 40, 40, [420, 220, 0], [60, 0, 0]);
-
-			rev_joint(7, 8, [400, 600]);
-			rev_joint(8, 9, [400, 540]);
-			rev_joint(9, 10, [400, 480]);
-			rev_joint(10, 11, [400, 420]);
-			rev_joint(11, 12, [400, 360]);
-
-			rev_joint(12, 13, [400, 300]);
-
-			weld_joint(13, 14);
-
-			delete_body(10);
-			create_box(1, 10, 70, [400, 450, 0], [60, 0, 0]);
-			//rev_joint(9, 10, [400, 480]);
-			rev_joint(10, 11, [400, 420]);
 
 			window.setInterval(timestep, 100*dt);
 
